[package]
name = "cargo-aur"
version = "1.6.0"
authors = ["Colin Woodbury <colin@fosskers.ca>"]
edition = "2021"
description = "Prepare Rust projects to be released on the Arch Linux User Repository."
homepage = "https://github.com/fosskers/cargo-aur"
repository = "https://github.com/fosskers/cargo-aur"
readme = "README.md"
license = "MIT"
keywords = ["cargo", "subcommand", "archlinux", "aur"]
categories = ["command-line-utilities"]

# NMS: This is temporarily here for testing.
[package.metadata.aur]
files = [
    ["CHANGELOG.md","usr/share/cargo-aur/CHANGELOG.md"],
    ["LICENSE","usr/share/cargo-aur/LICENSE"],
    ["CHANGELOG.md","usr/local/share/cargo-aur/CHANGELOG.md"]
]

[dependencies]
cargo-util = "0.2.6"
colored = "2.0"
gumdrop = "0.8"
hmac-sha256 = "1.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

[profile.release]
lto = true
strip = true
opt-level = "z"
codegen-units = 1
panic = "abort"
